# gmlauncher

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: global.h  includes.h  launcherprogram.h  menu.h  menuentry.h  menustructure.h  menutemplate.h  screen.h  screentemplate.h  settings.h  theme.h  utils.h
src/: launcherprogram.cpp  main.cpp  menu.cpp  menuentry.cpp  menustructure.cpp  menutemplate.cpp  screen.cpp  theme.cpp  utils.cpp
